[package]
name = "jwt-ps256"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
anyhow = "1.0"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = "0.16"
elliptic-curve = "0.13"
